...
                                    <constraint firstItem="5fk-hj-Ykd" firstAttribute="leading" secondItem="9Ma-Mj-6oe" secondAttribute="leading" id="mxJ-o7-Eek"/>
                                    <constraint firstItem="5fk-hj-Ykd" firstAttribute="top" secondItem="4Vv-my-8Cj" secondAttribute="bottom" constant="8" id="wmk-hi-Bkr"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhK-lp-g4p">
                                <rect key="frame" x="354" y="605.66666666666663" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="AddButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="Ifu-Mu-8eT"/>
                                    <constraint firstAttribute="height" constant="40" id="qau-xo-PDf"/>
                                </constraints>
                                <state key="normal" backgroundImage="rounded-add-button"/>
                                <connections>
...
